# SGI-ideas-cmake

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.c  b.c  d.c  draw_holder.c  draw_lamp.c  draw_logo.c  draw_logo_line.c  draw_logo_shadow.c  e.c  f.c  h.c  i.c  m.c  n.c  o.c  p.c  r.c  s.c  t.c  track.c  w.c
